squash 12 commit into 1 commit

--- a/app/assets/stylesheets/modules/top_page.scss
+++ b/app/assets/stylesheets/modules/top_page.scss
@@ -12,9 +12,10 @@
       letter-spacing: 1px;
     }
     &__message {
+      width: 70%;
       font-weight: 600;
       font-size: 16px;
-      margin: 20px 0;
+      margin: 20px auto;
     }
     &__link {
       a:first-child {
