--- a/app/views/contributions/top_page.html.erb
+++ b/app/views/contributions/top_page.html.erb
@@ -1,14 +1,11 @@
 <section class="top-page">
   <div class="welcome">
-    <h1 class="welcome__title">DaiGoBlogへようこそ！！</h1>
+    <h1 class="welcome__title">Welcome to my site！！</h1>
     <p class="welcome__message">
-      このサイトはメンタリストであるDaiGoさんの発言を元に『自分の知識の定着』を目的としたWebサイトになります。<br>
-      本来、知識の定着にはアウトプット時に人間の感情が籠っているとその質は高くなるそうです。<br>
-      しかし、知識を定着させたい時にアウトプットできる人が周囲にいない場合や、共有できない理由があるかもしれません。<br>
-      サイトに取り入れたプログラミングスキルについては、TECK EXPERTの共同制作で<br>
-      自身が担当せず、また初見の知識を選択し取り入れております。<br>
-      知識の向上が目的でなくても楽しめるように、趣味やブログも投稿していただくことができるサイトになっております。<br>
-      何かに努力する人の、アウトプットの場となり、知識の宝庫と感じ取ってもらうことができるページになればと思います。
+      このサイトはTECK EXPERTで学んだ経験を元に作成した就職活動用のポートフォリオとなります。
+      知識のアウトプット、ブログ、趣味の発信などを目的としたBlogサイトとなります。
+      ユーザー登録を完了しないと扱えないページもあるため、当サイトを閲覧される企業様は別途お伝えしますTESTユーザーをご利用下さい。
+      下記の3つのボタンより当サイトへアクセスを宜しくお願い致します。
     </p>
     <ul class="welcome__link">
       <%= link_to contributions_path, class: :"welcome__link__first" do %>
