--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <section class="header">
   <div class="header__contents">
-    <h1><%= link_to "DaiGo Blog", contributions_path, class: :"header__contents__title" %></h1>
+    <h1><%= link_to "Pieces", contributions_path, class: :"header__contents__title" %></h1>
   </div>
   <div class="header__nav">
     <ul class="header__nav__block">
