--- a/app/views/contributions/top_page.html.erb
+++ b/app/views/contributions/top_page.html.erb
@@ -2,7 +2,7 @@
   <div class="welcome">
     <h1 class="welcome__title">Welcome to my site！！</h1>
     <p class="welcome__message">
-      このサイトはTECK EXPERTで学んだ経験を元に作成した就職活動用のポートフォリオとなります。
+      このサイトはTECH::EXPERTで学んだ経験を元に作成した就職活動用のポートフォリオとなります。
       知識のアウトプット、ブログ、趣味の発信などを目的としたBlogサイトとなります。
       ユーザー登録を完了しないと扱えないページもあるため、当サイトを閲覧される企業様は別途お伝えしますTESTユーザーをご利用下さい。
       下記の3つのボタンより当サイトへアクセスを宜しくお願い致します。
